[#155934142] Add device to Azure Notification Hub
