# src/app.ts
@@ -250,5 +250,16 @@ export function newApp(
     }
   );
 
+  app.put(
+    "/api/v1/installations/:id",
+    bearerTokenAuth,
+    async (req: express.Request, res: express.Response) => {
+      const maybeResponse = await notificationController.createOrUpdateInstallation(
+        req
+      );
+      respond(maybeResponse, res);
+    }
+  );
+
   return app;
 }
